--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body, html {
+    @apply text-black m-0 p-0 min-h-screen min-w-full
+}
